# haribote_os_in_rust

./: Cargo.toml  Makefile  kernel.ld
src/: asm.rs  lib.rs  vga.rs
